- Fixed views - Working on suggest algorithm - Changed design

--- a/Client/index.html
+++ b/Client/index.html
@@ -91,7 +91,7 @@
 				<h2>
 					<strong>Sign In</strong>, with :			
 				</h2>
-				<form class="form-horizontal" ng-submit="submitLogin()">
+				<form class="form-horizontal"> <!--  ng-submit="submitLogin()" --> 
 					<fieldset>
 						<legend></legend>
 						<div class="form-group">
@@ -184,7 +184,7 @@
 
 		</div>
 		<!-- footer -->
-		<footer>
+		<div class="well">
 			<div class="row">
 				<div class="col-lg-12">
 					<span class="text-center">
@@ -193,23 +193,9 @@
 						</a>
 						<small class="center">© 2015 - Supinfo VC</small>
 					</span>
-					<ul class="center">
-						<li>
-							<a target="_blank" href="https://github.com/">Github</a>
-						</li>
-						<li>
-							<a target="_blank" href="https://twitter.com/">Twitter</a>
-						</li>
-						<li>
-							<a target="_blank" href="https://www.facebook.com/">Facebook</a>
-						</li>
-						<li>
-							<a target="_blank" href="https://plus.google.com/communities/">Google+</a>
-						</li>
-					</ul>
 				</div>
 			</div>
-		</footer>
+		</div>
 		<!-- /footer -->
 
 		<!-- Grab Google CDN's jQuery, fall back to local if offline -->
