--- a/Client/index.html
+++ b/Client/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <!--[if lte IE 7]> <html class="no-js ie67 ie678" lang="en" ng-app="mewPipeApp"> <![endif]-->
 <!--[if IE 8]> 	   <html class="no-js ie8 ie678" lang="en" ng-app="mewPipeApp"> <![endif]-->
 <!--[if IE 9]>     <html class="no-js ie9" lang="en" ng-app="mewPipeApp"> <![endif]-->
@@ -53,7 +53,7 @@
 					<a href="#/">
 						<img class="center" src="images/logo.png">
 					</a>
-					<p class="lead center">Share and discover wonderful videos</p>
+					<p class="lead center">Bringing video watching to an all new level</p>
 					<nav class="cl-effect-5 center" ng-if="isConnect">
 						<a href="#/"><span data-hover="Home">Home</span></a>
 						<a href="#/video/user/"><span data-hover="My&nbsp;video">My video</span></a>
